--- a/style.css
+++ b/style.css
@@ -1,63 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
+* {
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
-        *{
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-        body{
-            padding: 0;
-            margin: 0;
-            position: relative;
-            height: 100vh;
-            width: 100vw;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .container{
-            /* position: absolute;
-            translate: (-50%,-50%);
-            top: 30%;
-            left: 40%;
-            */
-            width: 300px;
-            padding: 30px;
-            border:2px solid #000;
-            border-radius: 10px;
-        }
-        .heading, p.to{
-            text-align: center;
-            font-weight: 700;
-            padding: 0;
-            margin: 0;
-        }
-        .amount, .result{
-            width: 100%;
-            margin:20px 0;
-        }
-        .two-column-input{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        input[type="number"],input[type="text"]{
-            padding: 10px;
-        }
-        select{
-            padding: 5px 20px;
-        }
-        .author{
-            text-align: center;
-            font-size: 0.8em;
-            padding: 0;
-            margin: 0;
-        }
-        .author a{
-            text-decoration: none;
-            font-weight: 600;
-            color:rgba(27, 31, 255, 0.61);
-        }
-        input[type="text"]::placeholder, #result {
-        text-align: center;
-      }
+body {
+    padding: 0;
+    margin: 0;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    width: 300px;
+    padding: 30px;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+
+.heading,
+p.to {
+    text-align: center;
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
+}
+
+.amount,
+.result {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.two-column-input {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+input[type="number"],
+input[type="text"] {
+    padding: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
+select {
+    padding: 5px 20px;
+}
+
+.author {
+    text-align: center;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.author a {
+    text-decoration: none;
+    font-weight: 600;
+    color: rgba(27, 31, 255, 0.61);
+}
+
+input[type="text"]::placeholder {
+    text-align: center;
+    color: rgba(204, 204, 204, 0.781);
+}
+
+#result {
+    text-align: center;
+}
